--- a/thumbnail-generator-api/package.json
+++ b/thumbnail-generator-api/package.json
@@ -11,14 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "archiver": "^5.3.0",
+    "aws-sdk": "^2.1097.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "file-saver": "^2.0.5",
     "jszip": "^3.7.1",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
-    "sharp": "^0.30.3"
+    "sharp": "^0.30.3",
+    "uuid": "^8.3.2"
   }
 }
