--- a/thumbnail-generator-api/package.json
+++ b/thumbnail-generator-api/package.json
@@ -2,6 +2,10 @@
   "name": "poc-api1",
   "version": "1.0.0",
   "description": "",
+  "scripts": {
+    "start": "node src/handler.js",
+    "dev": "nodemon src/handler.js"
+  },
   "dependencies": {
     "aws-sdk": "^2.1097.0",
     "cors": "^2.8.5",
@@ -11,6 +15,7 @@
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
+    "nodemon": "^2.0.15",
     "serverless-http": "^2.7.0",
     "sharp": "^0.30.3",
     "uuid": "^8.3.2"
