--- a/thumbnail-generator-api/serverless.yml
+++ b/thumbnail-generator-api/serverless.yml
@@ -16,6 +16,22 @@ provider:
 
 functions:
   api:
-    handler: src/handler.handler
+    handler: src/app.app
     events:
       - httpApi: "*"
+
+resources:
+  Resources:
+    usersTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: Users
+        AttributeDefinitions:
+          - AttributeName: email
+            AttributeType: S
+        KeySchema:
+          - AttributeName: email
+            KeyType: HASH
+        ProvisionedThroughput:
+          ReadCapacityUnits: 1
+          WriteCapacityUnits: 1
