--- a/thumbnail-generator-api/package.json
+++ b/thumbnail-generator-api/package.json
@@ -3,19 +3,24 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "node src/handler.js",
-    "dev": "nodemon src/handler.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js"
   },
   "dependencies": {
     "aws-sdk": "^2.1097.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.1",
+    "express-jwt": "^6.1.1",
     "helmet": "^5.0.2",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
     "serverless-http": "^2.7.0",
     "sharp": "^0.30.3",
     "uuid": "^8.3.2"
